Implement RFC 0050: Rename Buildpack
Renames 'Paketo PHP Start Buildpack' to 'Paketo Buildpack for PHP Start'.

Implements RFC 0050, https://github.com/paketo-buildpacks/rfcs/issues/233, for this buildpack.

Signed-off-by: Daniel Mikusa <dmikusa@vmware.com>

--- a/buildpack.toml
+++ b/buildpack.toml
@@ -5,7 +5,7 @@ api = "0.7"
   homepage = "https://github.com/paketo-buildpacks/php-start"
   id = "paketo-buildpacks/php-start"
   keywords = ["php", "httpd", "nginx"]
-  name = "Paketo PHP Start Buildpack"
+  name = "Paketo Buildpack for PHP Start"
 
   [[buildpack.licenses]]
     type = "Apache-2.0"
